k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonestore-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phonestore-ui
  template:
    metadata:
      labels:
        app: phonestore-ui
    spec:
      containers:
        - name: ui
          image: phonestore-ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
