k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phonestore-ui-service
spec:
  type: NodePort
  selector:
    app: phonestore-ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
